# iol-parallel-video-generator

./: CMakeLists.txt  README.md  main.cpp
libs/ffmpeg/: CMakeLists.txt
src/: frameWindows.cpp  paralleVideoGenerator.cpp  sequentialVideoGenerator.cpp  spawnProcess.cpp  utils.cpp  watchDir.cpp
